# simple-synth

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: Generating Sounds.ipynb
simplesynth/: filters.py  synth.py
