[tool.poetry]
name = "simplesynth"
version = "1.0.0"
description = "A simple-to-use subtractive synthesizer for Python."
authors = ["OdysseasKr"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
synthplayer = "^2.5"
scipy = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
